--- a/stylish.css
+++ b/stylish.css
@@ -66,7 +66,7 @@ button {
 #timeline {
     height: 100%;
 }
-#motivatoin {
+.motivatoin {
     align-items: center;
     width: 60px;
     height: 60px;
