--- a/stylish.css
+++ b/stylish.css
@@ -16,7 +16,7 @@ button {
     height: 100vh;
 }
 .header-footer {
-    background-color: rgb(91, 197, 230);
+    background-color: rgb(82, 80, 218);
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -52,7 +52,7 @@ button {
     background-color: darkorchid;
     width: 17rem;
     height: 28rem;
-    box-shadow: 1.5rem 1.5rem 1.5rem darkcyan;
+    box-shadow: 1.5rem 1.5rem 1.5rem rgb(42, 80, 80);
     border-radius: .5rem;
 }
 .left-photos {
