--- a/stylish.css
+++ b/stylish.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     border: 0;
     padding: 0;
+    height: 100vh;
 }
 button {
     background-color: rgb(175, 74, 34);
@@ -12,9 +13,14 @@ button {
 a {
     color: black;
 }
+ul {
+    /* padding: 0.25rem; */
+    list-style-type: none;
+}
 .layout-container {
     display: flex;
     flex-direction: column;
+    height: 100%;
 }
 .header-footer {
     background-color: rgb(82, 80, 218);
@@ -60,7 +66,6 @@ a {
 .pictures {
     align-items: center;
     width: 63%;
-    height: 25%%;
     margin-bottom: 3%;
 }
 .sk {
@@ -73,8 +78,6 @@ a {
     text-align: justify;
     padding-left: 0.5rem;
     padding-right: 0.5rem;
-}
-#hobbielist {
-    padding: 0.25rem;
-    list-style-type: none ;
+    padding-top: 0%;
+    align-content: center;
 }
